Add my zed theme AGAIN

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "home/user/local/share/zed/extensions/installed"]
 	path = home/user/local/share/zed/extensions/installed
 	url = https://github.com/owen-debiasio/bloled.git
+[submodule "home/user/local/share/zed/extensions/installed/bloled"]
+	path = home/user/local/share/zed/extensions/installed/bloled
+	url = https://github.com/owen-debiasio/bloled.git
