--- a/home/user/config/hypr/hyprland.conf
+++ b/home/user/config/hypr/hyprland.conf
@@ -2,10 +2,9 @@
 ### MONITORS ###
 ################
 
-monitor =,preferred,auto,1
-#monitor = DP-5, 1920x1080@60, 0x0, 1
-#monitor = eDP-1, 1920x1080@60, -1920x0, 1
-#monitor = HDMI-A-1, 1920x1080@60, 1920x0, 1
+monitor = DP-5, 1920x1080@60, 0x0, 1
+monitor = eDP-1, 1920x1080@60, -1920x0, 1
+monitor = HDMI-A-1, 1920x1080@60, 1920x0, 1
 
 ###################
 ### MY PROGRAMS ###
